--- a/TARpv21_Mobi/TARpv21_Mobi/TARpv21_Mobi.csproj
+++ b/TARpv21_Mobi/TARpv21_Mobi/TARpv21_Mobi.csproj
@@ -16,6 +16,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="Ajatunni.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Horoskoop_Page.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
