--- a/TARpv21_Mobi/TARpv21_Mobi.Android/TARpv21_Mobi.Android.csproj
+++ b/TARpv21_Mobi/TARpv21_Mobi.Android/TARpv21_Mobi.Android.csproj
@@ -132,7 +132,7 @@
     <AndroidResource Include="Resources\drawable\img0.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\bbbb.png" />
+    <AndroidResource Include="Resources\drawable\img11.png" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\img1.png" />
@@ -151,6 +151,18 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\img6.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\img8.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\img9.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\img10.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\img7.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
