--- a/TARpv21_Mobi/TARpv21_Mobi/TARpv21_Mobi.csproj
+++ b/TARpv21_Mobi/TARpv21_Mobi/TARpv21_Mobi.csproj
@@ -25,5 +25,8 @@
     <EmbeddedResource Update="Start_Page.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="WordlClock.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
